kubernetes/kustomize/components/expose-weatherapp/weatherapp-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weatherapp
  labels:
    name: weatherapp
  annotations:
    cert-manager.io/issuer: "weatherapp"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - weatherapp.86.109.8.247.nip.io
    secretName: weatherapp-86-109-8-247-nip-io-tls
  rules:
  - host: weatherapp.86.109.8.247.nip.io
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: weatherapp
            port: 
              number: 8080
